@@ -1,11 +1,0 @@
-/*  Fuse JavaScript framework, version <%= VERSION %>
- *  (c) 2008-2010 John-David Dalton
- *
- *  Prototype JavaScript framework, version 1.6.0.2
- *  (c) 2005-2010 Sam Stephenson
- *
- *  FuseJS and Prototype are freely distributable under the terms of an MIT-style license.
- *  For details, see the FuseJS web site http://www.fusejs.com/license.txt
- *  or the Prototype web site http://www.prototypejs.org/
- *
- *--------------------------------------------------------------------------*/
