@@ -2,7 +2,7 @@
   "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
-  <title>Unit test file <%= @title %> | FuseJS <%= FuseJS::VERSION %></title>
+  <title>Unit test file <%= @title %> | FuseJS <%= FuseJS::BUILD["Version"] %></title>
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
   <script type="text/javascript">
     var eventResults = { 'currentTarget': { } };
