@@ -1,3 +1,5 @@
+* Add a lightweight version of Sprockets to `Build.rb` for building FuseJS. [Kit Goncharov]
+
 * Switch to a pure-Ruby build system. [Kit Goncharov]
   - To build FuseJS, run `ruby Build.rb -d` or `--dist`.
   - To build the old unit tests, run `ruby Build.rb -t` or `--test`.
